unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/SLCA2__CA_UserSettings__c.object-meta.xml
<CustomObject>
    <label>CA_UserSettings</label>
    <nameField>
        <label>CA_UserSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_UserSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>