unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__filterBy__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__filterBy__c</fullName>
    <label>filterBy</label>
    <length>5</length>
    <type>Text</type>
</CustomField>