unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__objectName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__objectName__c</fullName>
    <label>objectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>