unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__pageNumber__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__pageNumber__c</fullName>
    <label>pageNumber</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>