unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__sortDirection__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__sortDirection__c</fullName>
    <label>sortDirection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>