unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__sortFieldName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__sortFieldName__c</fullName>
    <label>sortFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>