unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/fields/SLCA2__Value__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Value__c</fullName>
    <description>Serialized value (JSON)</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>