unpackaged/main/default/objects/SLCA2__CA_UserSettings__c/listViews/SLCA2__All.listView-meta.xml
<ListView>
    <fullName>SLCA2__All</fullName>
    <columns>SLCA2__Namespace__c</columns>
    <columns>SLCA2__Value__c</columns>
    <columns>SLCA2__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>